# zk-solana-experiments

./: .gitignore  Anchor.toml  Cargo.toml  README.md  biome.jsonc  generate-clients.ts  main.ts  package.json  raw_proof.json  vk_to_rs.ts
circuits/: factor.circom  factor.wasm  input.json  proof.json  public.json  verification_key.json  witness.wtns
keys/: zk1PtMyK25jdTA56c7duVC7Zk2gPKy2Y3PiYhJ4L7ro.json
programs/zk-factor/: Cargo.toml
programs/zk-factor/src/: constants.rs  errors.rs  lib.rs  macros.rs
programs/zk-factor/src/groth16/: errors.rs  lib.rs  mod.rs
programs/zk-factor/src/instructions/: initialize.rs
programs/zk-factor/src/state/: config.rs
programs/zk-factor/src/zk/: factor_vk.rs  mod.rs
programs/zk-factor/tests/: verify_proof.rs
utils/: constants.ts  ff.ts  helpers.ts  keypair.ts  zk.ts
wasm/: Cargo.toml
wasm/src/: lib.rs  proofs.rs  utils.rs
