[package]
name = "zk-utils"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
ark-serialize = "0.5.0"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
solana-bn254 = "2.1.13"
num-bigint = "0.4.6"


[dev-dependencies]
zk-factor = { path = "../programs/zk-factor" }
