[package]
name = "zk-factor"
version = "0.1.0"
authors = ["Alaa Zorkane <alaazorkane@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_factor"

[features]
default = []
cpi = ["no-entrypoint"]
test-sbf = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
circom-2 = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", features = [
  "init-if-needed",
] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git" }
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
num-bigint = "0.4.6"
solana-bn254 = "2.1.13"
thiserror = "2.0.11"


[dev-dependencies]
ark-serialize = "0.5.0"
ark-circom = "0.5.0"
ark-groth16 = "0.5.0"
ark-crypto-primitives = "0.5.0"
ark-std = "0.5.0"
tokio = { version = "1.29.1", features = ["macros"] }
ark-bls12-381 = "0.5.0"
